# sagemaker-poc

./: .env  .gitignore  README.md  docker-compose.yaml  dvc.yaml  environment.yaml  params.yaml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json  docker-compose.yml
code/: inference.py  params.yaml  requirements.txt  train.py
code/preprocessing/: 11_test_model-checkpoint.py  1_1_get_fields.py  1_2_get_field_locations.py  2_1_get_weather_locations.py  2_2_get_ssurgo_locations.py  2_3_get_nasa_locations.py  3_1_match_weather_locations.py  3_2_match_ssurgo_locations.py  3_3_match_nasa_locations.py  4_1_get_weather_data.py  4_2_get_ssurgo_data.py  4_3_get_nasa_data.py  5_get_gdd_stages.py  7_prepare_data.py  8_create_stage_data.py  9_create_train_test.py  aggregate_nasa_data.py  aggregate_ssurgo_data.py  aggregate_weather_data.py  etl.ipynb  get_remote_sensing.py  helper.py  pipeline.ipynb  sql_strings.py  utils_airlock.py
notebooks/: 0-Dataset.ipynb  1-Train.ipynb  2-Experiments.ipynb  3-Hyperparameter Tuning.ipynb  4-Train-Docker.ipynb  5-Predictor Docker.ipynb  6-Serverless.ipynb  7-XAI.ipynb  8-clarify.ipynb  9-processor.ipynb  preprocessing.py
scripts/: ecr_login.sh  setup.sh
syngenta/: __init__.py  syngenta.py
