[metadata]
name = syngenta
author = Josh C
author_email = josh.cole@syngenta.com
description = Data Science Project
version = 0.1.0
keywords =
  Data Science
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering
license_files =
  LICENSE.txt

[options]
python_requires = >=3.7
packages = find:
zip_safe = False

include_package_data = True
package_dir =
    =./

[options.package_data]
* = *.yaml, .env*

[options.extras_require]
tests =
  pytest
  flake8
  mypy

[options.packages.find]
exclude =
  tests

where =./syngenta

[options.entry_points]
console_scripts =
    syngenta=syngenta:main [pretty-printer]
